[fe] fixed overflow for product description and name

--- a/frontend/src/app/compontents/dashboard/hot-deals/hot-deals.component.scss
+++ b/frontend/src/app/compontents/dashboard/hot-deals/hot-deals.component.scss
@@ -10,6 +10,7 @@
 
 mat-card {
   height: 450px;
+  min-width: 600px;
 }
 
 ng-image-slider {
@@ -50,7 +51,7 @@ ng-image-slider {
   margin: 10px;
 }
 
-::ng-deep .ng-image-slider .ng-image-slider-container .main .main-inner .img-div .caption {
+:host .ng-image-slider .ng-image-slider-container .main .main-inner .img-div .caption {
   background-color: #3BAC44;
 }
 
@@ -60,15 +61,17 @@ ng-image-slider {
 
 .product-name {
   margin: 1vh 2vw 1vh 2vw;
-  font-size: 40px;
-  font-weight: 500;
+  font-size: 30px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product-description {
   margin: 2vh 2vw 2vh 2vw;
-  height: 330px;
   display: -webkit-box;
-  max-width: 400px;
   -webkit-line-clamp: 13;
   -webkit-box-orient: vertical;
   overflow: hidden;
